@@ -1,5 +1,5 @@
 /**
- * Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2016-2019
+ * Copyright (c) Istituto Nazionale di Fisica Nucleare (INFN). 2016-2021
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,13 @@
 package it.infn.mw.iam.core.oauth.profile.aarc;
 
 import java.util.HashSet;
-import java.util.Optional;
 import java.util.Set;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import com.google.common.collect.ImmutableSet;
+import com.google.common.base.Strings;
+import com.google.common.collect.Sets;
 
 import it.infn.mw.iam.persistence.model.IamGroup;
 import it.infn.mw.iam.persistence.model.IamUserInfo;
@@ -31,26 +31,34 @@ import it.infn.mw.iam.persistence.model.IamUserInfo;
 public class AarcClaimValueHelper {
 
   public static final Set<String> ADDITIONAL_CLAIMS =
-      ImmutableSet.of("eduperson_scoped_affiliation", "eduperson_entitlement");
+      Set.of("eduperson_scoped_affiliation", "eduperson_entitlement", "eduperson_assurance");
 
-  @Value("${iam.host}")
-  String iamHost;
+  @Value("${iam.aarc-profile.affiliation-scope}")
+  String affiliationScope;
 
-  @Value("${iam.organisation.name}")
-  String organisationName;
+  @Value("${iam.aarc-profile.urn-delegated-namespace}")
+  String urnDelegatedNamespace;
 
-  @Value("${iam.aarc-profile.urn-namespace}")
-  String urnNamespace;
+  @Value("${iam.aarc-profile.urn-nid}")
+  String urnNid;
+
+  @Value("${iam.aarc-profile.urn-subnamespaces}")
+  String urnSubnamespaces;
+
+  static final String DEFAULT_AFFILIATION_TYPE = "member";
 
   public Object getClaimValueFromUserInfo(String claim, IamUserInfo info) {
 
     switch (claim) {
 
       case "eduperson_scoped_affiliation":
-        return organisationName;
+        return String.format("%s@%s", DEFAULT_AFFILIATION_TYPE, affiliationScope);
 
       case "eduperson_entitlement":
         return resolveGroups(info);
+
+      case "eduperson_assurance":
+        return resolveLOA();
 
       default:
         return null;
@@ -60,29 +68,22 @@ public class AarcClaimValueHelper {
   public Set<String> resolveGroups(IamUserInfo userInfo) {
 
     Set<String> encodedGroups = new HashSet<>();
-    userInfo
-      .getGroups()
-      .forEach(g -> encodedGroups.add(encodeGroup(g)));
+    userInfo.getGroups().forEach(g -> encodedGroups.add(encodeGroup(g)));
     return encodedGroups;
   }
 
   private String encodeGroup(IamGroup group) {
-
-    StringBuilder urn = new StringBuilder();
-
-    urn.append(String.format("urn:%s:group:", urnNamespace));
-
-    StringBuilder groupHierarchy = new StringBuilder(group.getName());
-    Optional<IamGroup> parent = Optional.ofNullable(group.getParentGroup());
-    while (parent.isPresent()) {
-      groupHierarchy.insert(0, parent.get().getName() + ":");
-      parent = Optional.ofNullable(parent.get().getParentGroup());
+    String encodedGroupName = group.getName().replaceAll("/", ":");
+    String encodedSubnamespace = "";
+    if (!Strings.isNullOrEmpty(urnSubnamespaces)) {
+      encodedSubnamespace = String.format(":%s", String.join(":", urnSubnamespaces.trim().split(" ")));
     }
-    urn.append(groupHierarchy.toString());
+    return String.format("urn:%s:%s%s:group:%s", urnNid, urnDelegatedNamespace, encodedSubnamespace, encodedGroupName);
+  }
 
-    urn.append(String.format("#%s", iamHost));
+  public Set<String> resolveLOA() {
 
-    return urn.toString();
+    return Sets.newHashSet("https://refeds.org/assurance", "https://refeds.org/assurance/IAP/low");
   }
 
 }
